--- a/TP3_format_de_fichier/Format.ipynb
+++ b/TP3_format_de_fichier/Format.ipynb
@@ -40,16 +40,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
@@ -58,7 +51,7 @@
        " {'colonne 1': 32, 'colonne 2': 46.2, 'colonne 3': 'C'}]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -117,13 +110,12 @@
    ],
    "source": [
     "def save_list_csv(liste : list, filename=\"output.csv\"):\n",
-    "    chaine = \"\"\n",
-    "    chaine += \";\".join(liste)\n",
+    "    chaine = \";\".join(liste)\n",
     "    try:\n",
     "        with open(filename , \"w\") as f:\n",
     "            f.write(chaine)\n",
     "            return True\n",
-    "    except:\n",
+    "    except Exception:\n",
     "        return False\n",
     "\n",
     "\n",
@@ -159,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +167,7 @@
        "True"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -187,12 +179,12 @@
     "    assert all(len(value) == len_data for value in dico.values())\n",
     "    print(dico.keys())\n",
     "    with open(filename , \"w\") as f:\n",
-    "        headers = \";\".join(list(dico.keys()))\n",
+    "        headers = \",\".join(list(dico.keys()))\n",
     "        f.writelines(headers)\n",
     "        f.writelines(\"\\n\")\n",
     "        for i in range(len_data):\n",
-    "            row = [str(dico.get(key)[i]) for key in dico.keys()]\n",
-    "            row = \";\".join(row)\n",
+    "            row = [str(dico.get(key)[i]) for key in dico]\n",
+    "            row = \",\".join(row)\n",
     "            f.writelines(row)\n",
     "            f.writelines(\"\\n\")\n",
     "        return True\n",
@@ -203,7 +195,13 @@
    ]
   },
   {
-   "attachments": {},
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -212,6 +210,97 @@
     "Ecrire les variantes suivantes : \n",
     "- La variante française dans laquelle les valeurs sont déparées par des points-virgules et la virgule est utilisée à la place du point comme séparateur entre la partie entière et la partie fractionnaire des données numériques.\n",
     "- Le format TSV (ou TAB) dans lequel le caractère de séparation des valeurs n'est ni le point, ni le point-virgule, mais la tabulation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_keys(['colonne 1', 'colonne 2', 'colonne 3'])\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def save_dict_csv_fr(dico : dict, filename=\"output_fr.csv\"):\n",
+    "    len_data = list(dico.values())\n",
+    "    len_data = len(len_data[0])\n",
+    "    assert all(len(value) == len_data for value in dico.values())\n",
+    "    print(dico.keys())\n",
+    "    with open(filename , \"w\") as f:\n",
+    "        headers = \";\".join(list(dico.keys()))\n",
+    "        f.writelines(headers)\n",
+    "        f.writelines(\"\\n\")\n",
+    "        for i in range(len_data):\n",
+    "            row = [str(dico.get(key)[i]) for key in dico]\n",
+    "            row = [word.replace(\".\", \",\") for word in row]\n",
+    "            row = \";\".join(row)\n",
+    "            f.writelines(row)\n",
+    "            f.writelines(\"\\n\")\n",
+    "        return True\n",
+    "    return False\n",
+    "\n",
+    "\n",
+    "save_dict_csv_fr(dico)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_keys(['colonne 1', 'colonne 2', 'colonne 3'])\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def save_dict_csv_tab(dico : dict, filename=\"output_tab.csv\"):\n",
+    "    len_data = list(dico.values())\n",
+    "    len_data = len(len_data[0])\n",
+    "    assert all(len(value) == len_data for value in dico.values())\n",
+    "    print(dico.keys())\n",
+    "    with open(filename , \"w\") as f:\n",
+    "        headers = \"\\t\".join(list(dico.keys()))\n",
+    "        f.writelines(headers)\n",
+    "        f.writelines(\"\\n\")\n",
+    "        for i in range(len_data):\n",
+    "            row = [str(dico.get(key)[i]) for key in dico]\n",
+    "            row = \"\\t\".join(row)\n",
+    "            f.writelines(row)\n",
+    "            f.writelines(\"\\n\")\n",
+    "        return True\n",
+    "    return False\n",
+    "\n",
+    "\n",
+    "save_dict_csv_tab(dico)"
    ]
   },
   {
@@ -233,7 +322,42 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def create_dict(chaine : str, start_index=0) -> (dict, int) :\n",
+    "    dico = {}\n",
+    "    c_index = start_index\n",
+    "    numquote = 0\n",
+    "    while  c_index < len(chaine):\n",
+    "        key_start_index = chaine[c_index+1:].index(\"\\\"\")\n",
+    "        key_end_index = chaine[key_start_index+1:].index(\"\\\"\")\n",
+    "        key = chaine[key_start_index+1:key_end_index]\n",
+    "        c_index = key_end_index+2\n",
+    "        if chaine[c_index] == \"{\":\n",
+    "            value,  = create_dict(chaine[c_index])\n",
+    "        elif chaine[c_index] == \"[\":\n",
+    "            value = create_list(chaine[c_index])\n",
+    "        else:\n",
+    "            value_start_index = chaine[c_index+1:].index(\"\\\"\")\n",
+    "            value_end_index = chaine[value_start_index+1:].index(\"\\\"\")\n",
+    "            value = chaine[value_start_index+1,value_end_index]\n",
+    "            dico[key] = value\n",
+    "            c_index+=1\n",
+    "            chaine = chaine[c_index:]\n",
+    "\n",
+    "\n",
+    "def create_list(chaine, start_index=0) -> (list, int):\n",
+    "    pass\n",
+    "\n",
+    "def load_json(chaine : str):\n",
+    "    dico = {}\n",
+    "    taile = len(chaine)\n",
+    "    assert chaine[0] == chaine[-1] \n",
+    "    if chaine[0] == \"{\":\n",
+    "        return create_dict(chaine)\n",
+    "    elif chaine[0] == \"[\":\n",
+    "        return create_list(chaine)\n",
+    "        "
+   ]
   },
   {
    "attachments": {},
@@ -267,7 +391,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
