added two function: the first one take a dict and save it in json in a file.And the second one takes a json file and convert its contain  to a python dict object

--- a/TP3_format_de_fichier/Format.ipynb
+++ b/TP3_format_de_fichier/Format.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,7 @@
        " {'colonne 1': 32, 'colonne 2': 46.2, 'colonne 3': 'C'}]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -103,23 +103,55 @@
        "True"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "def save_list_csv(liste : list, filename=\"output.csv\"):\n",
-    "    chaine = \";\".join(liste)\n",
-    "    try:\n",
-    "        with open(filename , \"w\") as f:\n",
-    "            f.write(chaine)\n",
-    "            return True\n",
-    "    except Exception:\n",
-    "        return False\n",
+    "def save_list_csv(liste : list, filename=\"output_liste.csv\"):\n",
+    "  \n",
+    "    # for i , j in liste:\n",
+    "    #     assert len(i) == len(j)\n",
+    "    #     assert i.keys() == j.keys()\n",
+    "\n",
+    "    headers = list(liste[0].keys())\n",
+    "    # try:\n",
+    "    with open(filename , \"w\") as f:\n",
+    "        f.writelines(\",\".join(headers))\n",
+    "        f.writelines(\"\\n\")\n",
+    "        for dics in liste:\n",
+    "            row = [ str(word) for word in dics.values() ]\n",
+    "            f.writelines(\",\".join(row))\n",
+    "            f.writelines(\"\\n\")\n",
+    "        return True\n",
+    "    # except Exception:\n",
+    "    #     return False\n",
     "\n",
     "\n",
-    "save_list_csv([\"jehj\", \"efje\", \"dnpin\"])"
+    "save_list_csv( [\n",
+    "        {\"colonne 1\":12, \"colonne 2\":25.4, \"colonne 3\":'A'},\n",
+    "        {\"colonne 1\":36, \"colonne 2\":78.2, \"colonne 3\":'B'},\n",
+    "        {\"colonne 1\":32, \"colonne 2\":46.2, \"colonne 3\":'C'}\n",
+    "    ])"
    ]
   },
   {
@@ -195,13 +227,7 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -318,48 +344,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def create_dict(chaine : str, start_index=0) -> (dict, int) :\n",
-    "    dico = {}\n",
-    "    c_index = start_index\n",
-    "    numquote = 0\n",
-    "    while  c_index < len(chaine):\n",
-    "        key_start_index = chaine[c_index+1:].index(\"\\\"\")\n",
-    "        key_end_index = chaine[key_start_index+1:].index(\"\\\"\")\n",
-    "        key = chaine[key_start_index+1:key_end_index]\n",
-    "        c_index = key_end_index+2\n",
-    "        if chaine[c_index] == \"{\":\n",
-    "            value,  = create_dict(chaine[c_index])\n",
-    "        elif chaine[c_index] == \"[\":\n",
-    "            value = create_list(chaine[c_index])\n",
-    "        else:\n",
-    "            value_start_index = chaine[c_index+1:].index(\"\\\"\")\n",
-    "            value_end_index = chaine[value_start_index+1:].index(\"\\\"\")\n",
-    "            value = chaine[value_start_index+1,value_end_index]\n",
-    "            dico[key] = value\n",
-    "            c_index+=1\n",
-    "            chaine = chaine[c_index:]\n",
-    "\n",
-    "\n",
-    "def create_list(chaine, start_index=0) -> (list, int):\n",
-    "    pass\n",
-    "\n",
-    "def load_json(chaine : str):\n",
-    "    dico = {}\n",
-    "    taile = len(chaine)\n",
-    "    assert chaine[0] == chaine[-1] \n",
-    "    if chaine[0] == \"{\":\n",
-    "        return create_dict(chaine)\n",
-    "    elif chaine[0] == \"[\":\n",
-    "        return create_list(chaine)\n",
-    "        "
-   ]
-  },
-  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -369,10 +353,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[+] Done\n"
+     ]
+    }
+   ],
+   "source": [
+    "import json\n",
+    "\n",
+    "def save_json(dico : dict, filename=\"output.json\"):\n",
+    "    for key in dico:\n",
+    "        if type(dico[key]) == list:\n",
+    "            dico[key] = list(dico[key])\n",
+    "\n",
+    "    stringified_dict = json.dumps(dico)\n",
+    "    with open(filename, \"w\") as f:\n",
+    "        f.write(stringified_dict)\n",
+    "    print(\"[+] Done\")\n",
+    "\n",
+    "\n",
+    "save_json(dico)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'colonne 1': [12, 36, 32], 'colonne 2': [25.4, 78.2, 46.2], 'colonne 3': ['A', 'B', 'C']}\n"
+     ]
+    }
+   ],
+   "source": [
+    "def load_json(filename : str):\n",
+    "    with open(filename, \"r\") as f:\n",
+    "        stringified_dict = f.read()\n",
+    "        dico = json.loads(stringified_dict)\n",
+    "    return dico\n",
+    "\n",
+    "print(load_json(\"output.json\"))"
+   ]
   }
  ],
  "metadata": {
@@ -391,7 +422,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
