this time all it is completed

--- a/TP3_format_de_fichier/Format.ipynb
+++ b/TP3_format_de_fichier/Format.ipynb
@@ -67,6 +67,7 @@
     "    assert all(len(value) == len_data for value in dico.values())\n",
     "    res = []\n",
     "\n",
+    "\n",
     "    for i in range(len_data):\n",
     "        d = {key : dico[key][i] for key in dico.keys()}\n",
     "        res.append(d)\n",
@@ -112,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +122,7 @@
        "True"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +190,7 @@
        "True"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -227,54 +228,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[]\n"
+      "headers ['colonne 1', 'colonne 2', 'colonne 3']\n",
+      "lines [['12', '25.4', 'A'], ['36', '78.2', 'B'], ['32', '46.2', 'C']]\n"
      ]
     },
     {
-     "ename": "IndexError",
-     "evalue": "list index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_879392/2127848886.py\u001b[0m in \u001b[0;36m<cell line: 24>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     22\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mdico\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     23\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 24\u001b[0;31m \u001b[0mload_csv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"output.csv\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m/tmp/ipykernel_879392/2127848886.py\u001b[0m in \u001b[0;36mload_csv\u001b[0;34m(filename)\u001b[0m\n\u001b[1;32m     18\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlines\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkey\u001b[0m \u001b[0;32min\u001b[0m \u001b[0menumerate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdico\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 20\u001b[0;31m             \u001b[0mdico\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m  \u001b[0;34m[\u001b[0m\u001b[0mword\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mword\u001b[0m \u001b[0;32min\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mline\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mline\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mlines\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     21\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mdico\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
-     ]
+     "data": {
+      "text/plain": [
+       "{'colonne 1': ['12', '25.4', 'A'],\n",
+       " 'colonne 2': ['36', '78.2', 'B'],\n",
+       " 'colonne 3': ['32', '46.2', 'C']}"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "def load_csv(filename : str):\n",
-    "    dict = {}\n",
+    "def load_csv_dict(filename : str):\n",
+    "    dico = {}\n",
     "    with open(filename , \"r\") as f:\n",
-    "        \n",
     "        headers = f.readline()\n",
-    "        \n",
     "        headers = headers[0 : len(headers) -1 ]\n",
     "        headers = headers.split(\",\")\n",
+    "        print(\"headers\", headers)\n",
     "        for header in headers:\n",
     "            dico.update({header: []})\n",
-    "        lines = []\n",
-    "        for i in f.readlines():\n",
-    "            lines.append(i)\n",
-    "            \n",
-    "        for i, line in enumerate(lines):\n",
-    "            lines[i] = lines[i].remove(\"\\n\")\n",
-    "            lines[i] = lines[i].split(\",\")\n",
-    "        print(lines)\n",
+    "\n",
+    "        lines = [i[:-1].split(\",\") for i in f.readlines()]\n",
+    "\n",
+    "        print(\"lines\", lines)\n",
+    "\n",
     "        for i, key in enumerate(dico):\n",
     "            dico[key] =  [word for word in [line for line in lines][i] ]\n",
     "    \n",
     "    return dico\n",
     "\n",
-    "load_csv(\"output.csv\")"
+    "\n",
+    "load_csv_dict(\"output.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "headers ['colonne 1', 'colonne 2', 'colonne 3']\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[{'colonne 1': '12', 'colonne 2': '25.4', 'colonne 3': 'A'},\n",
+       " {'colonne 1': '36', 'colonne 2': '78.2', 'colonne 3': 'B'},\n",
+       " {'colonne 1': '32', 'colonne 2': '46.2', 'colonne 3': 'C'}]"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def load_csv_list(filename : str):\n",
+    "    dico = {}\n",
+    "    liste = []\n",
+    "    with open(filename , \"r\") as f:\n",
+    "        headers = f.readline()\n",
+    "        headers = headers[0 : len(headers) -1 ]\n",
+    "        headers = headers.split(\",\")\n",
+    "\n",
+    "        lines = [i[:-1].split(\",\") for i in f.readlines()]\n",
+    "\n",
+    "        for i, line in enumerate(lines):\n",
+    "            liste.append({headers[j]: line[j] for j in range(len(headers))})\n",
+    "\n",
+    "    return liste\n",
+    "\n",
+    "\n",
+    "load_csv_list(\"output.csv\")"
    ]
   },
   {
@@ -473,7 +517,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
