--- a/TP3_format_de_fichier/Format.ipynb
+++ b/TP3_format_de_fichier/Format.ipynb
@@ -218,6 +218,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -422,6 +423,59 @@
     "\n",
     "\n",
     "save_dict_csv_tab(dico)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def load_csv_fr_dict(filename : str):\n",
+    "    dico = {}\n",
+    "    with open(filename , \"r\") as f:\n",
+    "        headers = f.readline()\n",
+    "        headers = headers[0 : len(headers) -1 ]\n",
+    "        headers = headers.split(\";\")\n",
+    "        print(\"headers\", headers)\n",
+    "        for header in headers:\n",
+    "            dico.update({header: []})\n",
+    "\n",
+    "        lines = [i[:-1].split(\";\") for i in f.readlines()]\n",
+    "\n",
+    "\n",
+    "        for i, key in enumerate(dico):\n",
+    "            dico[key] =  [word for word in [line for line in lines][i] ]\n",
+    "    \n",
+    "    return dico\n",
+    "\n",
+    "\n",
+    "load_csv_dict(\"output.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def load_csv_fr_list(filename : str):\n",
+    "    dico = {}\n",
+    "    liste = []\n",
+    "    with open(filename , \"r\") as f:\n",
+    "        headers = f.readline()\n",
+    "        headers = headers[0 : len(headers) -1 ]\n",
+    "        headers = headers.split(\";\")\n",
+    "\n",
+    "        lines = [i[:-1].split(\";\") for i in f.readlines()]\n",
+    "\n",
+    "        for i, line in enumerate(lines):\n",
+    "            liste.append({headers[j]: line[j] for j in range(len(headers))})\n",
+    "\n",
+    "    return liste\n",
+    "\n",
+    "\n",
+    "load_csv_list(\"output.csv\")"
    ]
   },
   {
