corrected latex code

--- a/TP5_Variables_Aleatooires/Variable aléatoire.ipynb
+++ b/TP5_Variables_Aleatooires/Variable aléatoire.ipynb
@@ -36,13 +36,13 @@
     "- $P(\\Omega)=1$\n",
     "- si $A \\cap B = \\emptyset$, alors $P(A \\cup B) = P(A) + P(B)$\n",
     "\n",
-    "$\\Omega$ est l'événement certain (P(\\Omega)=1)\n",
+    "$\\Omega$ est l'événement certain $(P(\\Omega)=1)$\n",
     "\n",
     "Des propriétés suivantes, on peut déduire d'autres propriétés :\n",
     "- $P(\\overline{A}) = 1 - P(A)$\n",
     "- $P( A \\cup B) = P(A) + P(B) - P(A \\cap B)$\n",
     "\n",
-    "## Probabilités conditionnelles\n",
+    "## Probabilités conditionnelles\n",
     "\n",
     "Soient deux événements $A$ et $B$, on note $P(A|B)$ la probabilité conditionnelle de l'événement $A$ conditionnellement à $B$. Il s'agit de la probabilité que $A$ se réalise quand $B$ se reéalise.\n",
     "\n",
@@ -83,7 +83,7 @@
     "\n",
     "## Définition\n",
     "\n",
-    "Le résultat d'une expérience aléatoire est un événement élémentaire \\omega$ appartenant à l'ensemble des possibles.\n",
+    "Le résultat d'une expérience aléatoire est un événement élémentaire $\\omega$ appartenant à l'ensemble des possibles.\n",
     "\n",
     "$$\\omega \\in \\Omega$$\n",
     "\n",
