corrected some synthax errors

--- a/ Analyse et traitement d'un  dataset/Indicator_Analysis.ipynb
+++ b/ Analyse et traitement d'un  dataset/Indicator_Analysis.ipynb
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1708,7 +1708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1733,7 +1733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1742,7 +1742,7 @@
        "'IndicatorName'"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1769,7 +1769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1795,7 +1795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1821,7 +1821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1847,7 +1847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1873,7 +1873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1888,7 +1888,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1907,7 +1907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1933,7 +1933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1959,7 +1959,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -2002,7 +2002,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -2029,7 +2029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -2644,7 +2644,7 @@
        "5096858  EN.ATM.CO2E.PC  2011  5.185043  "
       ]
      },
-     "execution_count": 121,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2667,7 +2667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -2676,7 +2676,7 @@
        "52"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2695,7 +2695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -2712,7 +2712,7 @@
        "Name: Value, dtype: float64"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2731,7 +2731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -2760,7 +2760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -3109,7 +3109,7 @@
        "5096858  2011  5.185043"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3122,7 +3122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -3489,19 +3489,19 @@
        "5576441  2014  42732.566503"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "GDP_serie  = indicator_df[[\"Year\", \"Value\"]][(indicator_df[\"IndicatorName\"] == \"GDP per capita (current US$)\") & (indicator_df[\"CountryName\"] == \"France\")]\n",
-    "GDP_serie.rename(columns={\"Value\": \"PIB\")"
+    "GDP_serie.rename(columns={\"Value\": \"PIB\"})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -3527,7 +3527,7 @@
        "      <th></th>\n",
        "      <th>Year</th>\n",
        "      <th>CO2</th>\n",
-       "      <th>PIB</th>\n",
+       "      <th>Value</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -3848,7 +3848,7 @@
        "</div>"
       ],
       "text/plain": [
-       "    Year       CO2           PIB\n",
+       "    Year       CO2         Value\n",
        "0   1960  5.793508   1338.299606\n",
        "1   1961  5.927130   1440.554330\n",
        "2   1962  6.207578   1585.917267\n",
@@ -3903,7 +3903,7 @@
        "51  2011  5.185043  43807.475903"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3929,207 +3929,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>CountryName</th>\n",
-       "      <th>CountryCode</th>\n",
-       "      <th>IndicatorName</th>\n",
-       "      <th>IndicatorCode</th>\n",
-       "      <th>Year</th>\n",
-       "      <th>Value</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2092</th>\n",
-       "      <td>Middle East &amp; North Africa (all income levels)</td>\n",
-       "      <td>MEA</td>\n",
-       "      <td>Adolescent fertility rate (births per 1,000 wo...</td>\n",
-       "      <td>SP.ADO.TFRT</td>\n",
-       "      <td>1960</td>\n",
-       "      <td>1.360163e+02</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2093</th>\n",
-       "      <td>Middle East &amp; North Africa (all income levels)</td>\n",
-       "      <td>MEA</td>\n",
-       "      <td>Age dependency ratio (% of working-age populat...</td>\n",
-       "      <td>SP.POP.DPND</td>\n",
-       "      <td>1960</td>\n",
-       "      <td>8.721354e+01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2094</th>\n",
-       "      <td>Middle East &amp; North Africa (all income levels)</td>\n",
-       "      <td>MEA</td>\n",
-       "      <td>Age dependency ratio, old (% of working-age po...</td>\n",
-       "      <td>SP.POP.DPND.OL</td>\n",
-       "      <td>1960</td>\n",
-       "      <td>6.954371e+00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2095</th>\n",
-       "      <td>Middle East &amp; North Africa (all income levels)</td>\n",
-       "      <td>MEA</td>\n",
-       "      <td>Age dependency ratio, young (% of working-age ...</td>\n",
-       "      <td>SP.POP.DPND.YG</td>\n",
-       "      <td>1960</td>\n",
-       "      <td>8.011326e+01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2096</th>\n",
-       "      <td>Middle East &amp; North Africa (all income levels)</td>\n",
-       "      <td>MEA</td>\n",
-       "      <td>Arms exports (SIPRI trend indicator values)</td>\n",
-       "      <td>MS.MIL.XPRT.KD</td>\n",
-       "      <td>1960</td>\n",
-       "      <td>3.000000e+06</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5654054</th>\n",
-       "      <td>South Africa</td>\n",
-       "      <td>ZAF</td>\n",
-       "      <td>Time required to register property (days)</td>\n",
-       "      <td>IC.PRP.DURS</td>\n",
-       "      <td>2015</td>\n",
-       "      <td>2.300000e+01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5654055</th>\n",
-       "      <td>South Africa</td>\n",
-       "      <td>ZAF</td>\n",
-       "      <td>Time required to start a business (days)</td>\n",
-       "      <td>IC.REG.DURS</td>\n",
-       "      <td>2015</td>\n",
-       "      <td>4.600000e+01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5654056</th>\n",
-       "      <td>South Africa</td>\n",
-       "      <td>ZAF</td>\n",
-       "      <td>Time to prepare and pay taxes (hours)</td>\n",
-       "      <td>IC.TAX.DURS</td>\n",
-       "      <td>2015</td>\n",
-       "      <td>2.000000e+02</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5654057</th>\n",
-       "      <td>South Africa</td>\n",
-       "      <td>ZAF</td>\n",
-       "      <td>Time to resolve insolvency (years)</td>\n",
-       "      <td>IC.ISV.DURS</td>\n",
-       "      <td>2015</td>\n",
-       "      <td>2.000000e+00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5654058</th>\n",
-       "      <td>South Africa</td>\n",
-       "      <td>ZAF</td>\n",
-       "      <td>Total tax rate (% of commercial profits)</td>\n",
-       "      <td>IC.TAX.TOTL.CP.ZS</td>\n",
-       "      <td>2015</td>\n",
-       "      <td>2.880000e+01</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>153219 rows × 6 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                            CountryName CountryCode  \\\n",
-       "2092     Middle East & North Africa (all income levels)         MEA   \n",
-       "2093     Middle East & North Africa (all income levels)         MEA   \n",
-       "2094     Middle East & North Africa (all income levels)         MEA   \n",
-       "2095     Middle East & North Africa (all income levels)         MEA   \n",
-       "2096     Middle East & North Africa (all income levels)         MEA   \n",
-       "...                                                 ...         ...   \n",
-       "5654054                                    South Africa         ZAF   \n",
-       "5654055                                    South Africa         ZAF   \n",
-       "5654056                                    South Africa         ZAF   \n",
-       "5654057                                    South Africa         ZAF   \n",
-       "5654058                                    South Africa         ZAF   \n",
-       "\n",
-       "                                             IndicatorName      IndicatorCode  \\\n",
-       "2092     Adolescent fertility rate (births per 1,000 wo...        SP.ADO.TFRT   \n",
-       "2093     Age dependency ratio (% of working-age populat...        SP.POP.DPND   \n",
-       "2094     Age dependency ratio, old (% of working-age po...     SP.POP.DPND.OL   \n",
-       "2095     Age dependency ratio, young (% of working-age ...     SP.POP.DPND.YG   \n",
-       "2096           Arms exports (SIPRI trend indicator values)     MS.MIL.XPRT.KD   \n",
-       "...                                                    ...                ...   \n",
-       "5654054          Time required to register property (days)        IC.PRP.DURS   \n",
-       "5654055           Time required to start a business (days)        IC.REG.DURS   \n",
-       "5654056              Time to prepare and pay taxes (hours)        IC.TAX.DURS   \n",
-       "5654057                 Time to resolve insolvency (years)        IC.ISV.DURS   \n",
-       "5654058           Total tax rate (% of commercial profits)  IC.TAX.TOTL.CP.ZS   \n",
-       "\n",
-       "         Year         Value  \n",
-       "2092     1960  1.360163e+02  \n",
-       "2093     1960  8.721354e+01  \n",
-       "2094     1960  6.954371e+00  \n",
-       "2095     1960  8.011326e+01  \n",
-       "2096     1960  3.000000e+06  \n",
-       "...       ...           ...  \n",
-       "5654054  2015  2.300000e+01  \n",
-       "5654055  2015  4.600000e+01  \n",
-       "5654056  2015  2.000000e+02  \n",
-       "5654057  2015  2.000000e+00  \n",
-       "5654058  2015  2.880000e+01  \n",
-       "\n",
-       "[153219 rows x 6 columns]"
-      ]
-     },
-     "execution_count": 61,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "african_indicator"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_17319/25010990.py:3: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "/tmp/ipykernel_16257/25010990.py:3: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
       "  africa_CO2_serie = african_indicator[[\"Year\", \"Value\"]][(indicator_df[\"IndicatorName\"] == \"CO2 emissions (metric tons per capita)\")]\n",
-      "/tmp/ipykernel_17319/25010990.py:6: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "/tmp/ipykernel_16257/25010990.py:6: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
       "  africa_PIB_serie = african_indicator[[\"Year\", \"Value\"]][(indicator_df[\"IndicatorName\"] == \"GDP per capita (current US$)\")]\n"
      ]
     },
@@ -4248,7 +4057,7 @@
        "[1626 rows x 3 columns]"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4276,7 +4085,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4285,7 +4094,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -4658,7 +4467,7 @@
        "2014                NaN  39589.278946"
       ]
      },
-     "execution_count": 125,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4687,7 +4496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -4736,18 +4545,18 @@
        "CO2  0.09258  1.00000"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "corr_table africa_PIB_CO2[[\"PIB\", \"CO2\"]].corr()"
+    "africa_PIB_CO2[[\"PIB\", \"CO2\"]].corr()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -4802,7 +4611,7 @@
        "CO2            0.38599  1.00000"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4820,7 +4629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -4950,7 +4759,7 @@
        "[1626 rows x 4 columns]"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4962,7 +4771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -5392,7 +5201,7 @@
        "2014                NaN  39589.278946       NaN"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
