moved last year work in a new folder

--- a/l3_SD/Visualisation de doonnées/Visualisation de données.ipynb
+++ b/l3_SD/Visualisation de doonnées/Visualisation de données.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +216,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv(\"Indicators.csv\")\n",
+    "df = pd.read_csv(\"../ Analyse et traitement d'un  dataset/Indicators.csv\")\n",
     "df"
    ]
   },
