--- a/l3_SD/ Analyse et traitement d'un  dataset/Indicator_Analysis.ipynb
+++ b/l3_SD/ Analyse et traitement d'un  dataset/Indicator_Analysis.ipynb
@@ -4544,7 +4544,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
